* Make Element#getDimensions use offset(Height|Width) rather than client(Height|Width). Closes #10122. [demian85, jddalton, Nick Stackenburg]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [Andrew Dupont, hagen.seifert, jddalton]

* Make Object.isNumber check that the number is finite (rather than NaN or +/-Infinity). Closes #10349. [mkim]

* Ensure Object.isHash handles "falsy" values properly. [jddalton]

* Ensure Object.isElement handles "falsy" values properly. [kangax]

* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). [kangax]

* Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. Closes #10841. [broofa, kangax]

* unit test: Update DOM unit tests to avoid failing on Element#replace tests in Opera. [Andrew Dupont, jddalton]

* Ensure Element.Methods.Simulated.hasAttribute() returns a boolean value. [jddalton]

* Ensure Array#intersect returns correct result if intersect value is 0. [jddalton]

* Ensure Element#hide and Element#show return an element, even if passed an element ID. [jddalton]

* Ensure IE $(form).readAttribute('id') behaves properly when child element has id='id' or name='id'. Closes #11092. [#89 state:resolved] [jddalton]

* Stop Form.Element.disable from stealing focus. Closes #11214. [kangax, sjoekie]

* Ensure String#escapeHTML escapes double quotes. Closes #10622. [kangax]

* Make String#extractScripts remove commented out scripts and remove the "m" RegExp flag from String#(extractScripts|stripScripts). Closes #9599. [bubbatls, jddalton]

* Fix scriptFragment Safari bug with non-ASCII characters in scripts. Closes #9663. [Alexey Proskuryakov, jddalton]

* Remove the use of $() in Element#hasAttribute methods to keep Selector class speedy. [Andrew Dupont]

* Ensure Element methods run the element argument through $(). Closes #11472. [jddalton]
